# jutils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_all.py
jutils/: __init__.py  colors.py  helpers.py  instantiate.py  log.py  plot_utils.py  rcparams.py  timing.py  torchy.py  unit_test.py
jutils/dataset/: __init__.py  gmm_configs.yaml  toy_2d.py
jutils/distributed/: README.md  __init__.py  min_DDP.py  pytorch_distributed.py
jutils/models/: __init__.py  kl_autoencoder.py
jutils/nn/: __init__.py  ae_flux2.py  attention.py  dino.py  ema.py  kl_autoencoder.py  lr_schedulers.py  metric_kid.py  rope.py  tiny_autoencoder.py  transformer.py
jutils/nn/generative/: __init__.py  ddim.py  ddpm.py  diffusion.py  flow.py
jutils/vision/: __init__.py  depth.py  image.py  video.py
